cholera 0.7.9.9041
==================

- add thresholdFataltiesGraph().
- add fatalitiesGraphData().


cholera 0.7.9.9040
==================

- add partitionOrthoAddressesPDF().
- amend latlongOrthoAddress() for OSM coordinates.


cholera 0.7.9.9039
==================

- add partitionAddressesPDF().
- amend latlongAddress() for OSM coordinates.


cholera 0.7.9.9038
==================

- rename latlongFramePDF() to framePartitionPDF().
- set asp = 1 in framePartitionPDF() and pumpsPDF().


cholera 0.7.9.9037
==================

- amend latlongRoads() for OSM coordinates.


cholera 0.7.9.9036
==================

- add addCase(case %in% c("all", "anchor"), col = col).


cholera 0.7.9.9035
==================

- add temporary fix for cases 299 and 430 in latlongAddress().
- temporarily use latlongAddress() in latlongWalkingPath().
- add/set addCase(pch = 1, cex = 1, point.lwd = 2).


cholera 0.7.9.9034
==================

- amend latlongNearestPump() for observed cases.


cholera 0.7.9.9033
==================

- use cholera::ortho.proj$road.segment in latlongOrthoAddress().
- use cholera::ortho.proj.pump$road.segment in latlongOrthoPump().


cholera 0.7.9.9032
==================

- use latlong*() prototypes in latlongEmbed().


cholera 0.7.9.9031
==================

- add new latlongOrthoAddress() prototype.
- add/set latlongOrthoAddress(vestry = FALSE).
- add latlongOrthoPump() prototype.


cholera 0.7.9.9030
==================

- include points (vertices) above threshold in partitionRoads().
- add partitionRoadsPDF().
- fix latlongRoads() output.
- add/set partitionRoadsPDF(pch = 46).
- fix nominal georeferenced coordinates errors in latlongRoads().


cholera 0.7.9.9029
==================

- add latlongOrthoAddressPDF().
- add rotatePoint(dataset = "ortho.proj").
- add latlongOrthoAddress().


cholera 0.7.9.9028
==================

- return data frames for 6-tuples in partitionOrthoAddresses().