@@ -89,6 +89,7 @@ export(oxfordWeather)
 export(partitionAddresses)
 export(partitionAddressesPDF)
 export(partitionFatalities)
+export(partitionFatalitiesPDF)
 export(partitionFrame)
 export(partitionOrthoAddresses)
 export(partitionOrthoAddressesPDF)
